Bug 1569089 - Sync std handles after AttachConsole(). r=aklotz

AttachConsole() may change Win32 std handle values if Firefox is launched from
cmd.exe that makes discrepancy between Win32 and CRT. This patch synchronizes
both std handles.

Differential Revision: https://phabricator.services.mozilla.com/D51275